@@ -13,6 +13,7 @@ import com.devonfw.tools.ide.common.Tag;
 import com.devonfw.tools.ide.context.IdeContext;
 import com.devonfw.tools.ide.git.GitContext;
 import com.devonfw.tools.ide.process.ProcessContext;
+import com.devonfw.tools.ide.process.ProcessErrorHandling;
 import com.devonfw.tools.ide.process.ProcessMode;
 import com.devonfw.tools.ide.process.ProcessResult;
 import com.devonfw.tools.ide.step.Step;
@@ -96,12 +97,10 @@ public class Mvn extends PluginBasedCommandlet {
       secureRandom.nextBytes(randomBytes);
       String base64String = Base64.getEncoder().encodeToString(randomBytes);
 
-      ProcessContext pc = this.context.newProcess().executable("mvn");
-      pc.addArgs("--encrypt-master-password", base64String);
-
-      ProcessResult result = pc.run(ProcessMode.DEFAULT_CAPTURE);
-
-      String encryptedMasterPassword = result.getOut().get(0);
+      Mvn mvn = new Mvn(context);
+      ProcessResult result = mvn.runTool(ProcessMode.DEFAULT_CAPTURE, ProcessErrorHandling.LOG_WARNING, this.context.newProcess(), "--encrypt-master-password",
+          base64String);
+      String encryptedMasterPassword = result.getOut().getFirst();
 
       String settingsSecurityXml =
           "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n" + "<settingsSecurity>\n" + "  <master>" + encryptedMasterPassword + "</master>\n"
@@ -154,12 +153,11 @@ public class Mvn extends PluginBasedCommandlet {
 
     String input = this.context.askForInput("Please enter secret value for variable " + variable + ":");
 
-    ProcessContext pc = this.context.newProcess().executable("mvn");
-    pc.addArgs("--encrypt-password", input);
-    pc.addArg(getSettingsSecurityProperty());
-    ProcessResult result = pc.run(ProcessMode.DEFAULT_CAPTURE);
+    Mvn mvn = new Mvn(context);
+    ProcessResult result = mvn.runTool(ProcessMode.DEFAULT_CAPTURE, ProcessErrorHandling.LOG_WARNING, this.context.newProcess(), "--encrypt-password", input,
+        getSettingsSecurityProperty());
 
-    String encryptedPassword = result.getOut().get(0);
+    String encryptedPassword = result.getOut().getFirst();
     this.context.info("Encrypted as " + encryptedPassword);
 
     return encryptedPassword;
